--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "uc-comp-codemod",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "testUc": "jest ./transforms/__tests__/uc-comp-to-react-comp-test.js "
+    "testUc": "jest ./transforms/__tests__/uc-comp-to-react-comp-test.js ",
+    "transCom": "node --inspect-brk ./node_modules/jscodeshift/bin/jscodeshift.sh -t ./transforms/uc-comp-to-react-comp.js TransComp.jsx --run-in-band ",
+    "trans": "jscodeshift -t ./transforms/uc-comp-to-react-comp.js TransComp.jsx"
   },
   "dependencies": {
     "eslint": "^6.6.0",
