--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "eslint": "^6.6.0",
     "execa": "^3.2.0",
     "jscodeshift": "^0.6.4",
-    "meow": "^5.0.0"
+    "meow": "^5.0.0",
+    "chalk": "^2.4.2",
+    "is-git-clean": "^1.1.0"
   },
   "jest": {
     "globals": {
